--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <li>ファイル、特にプログラムのソースコードの管理に使われるバージョン管理システムのひとつ。
 特に規模が大きなプログラム、多くのファイルに分かれたプログラムともなると編集ミスをしたりバグを埋め込んでしまった、なんてとき「あ～どのファイルのどこを変更したっけ～...」となることが多くなる。さらに複数人での開発となるとなおさら。そこでプログラムフォルダ(リポジトリ)単位でソースコードごとに変更(差分)を編集内容などのコメントとともに記録しておけば「この変更がまずかったかな？」という推測もしやすくなる。gitはこのバージョン管理システムをプログラマに使いやすい形で提供してくれる。<br>
 たとえば、「一区切りついた。ここで一旦変更を記録しておこう(commit)」、「この変更はまずかった、このひとつ前まで戻そう(checkoutしてrevert)」などが簡単ににできる。<br>
-ちなみに、このgitはLinuxの生みの親で有名なLinus Torvalds(リーナス・トーバルズ)氏がそれまで使っていたバージョン管理システムが使えなくなった(くわしくは<a href="https://ja.wikipedia.org/wiki/Git">Wikipedia - git</a>を参照)のを機にそれ以前のバージョン管理システムの欠点を埋めるアイデアを取り入れて開発した。現在のスタンダードなバージョン管理システムである。</li>
+ちなみに、このgitはLinuxの生みの親で有名なLinus Torvalds(リーナス・トーバルズ)氏がそれまで使っていたバージョン管理システムが使えなくなった(くわしくは<a href="https://ja.wikipedia.org/wiki/Git">Wikipedia - git</a>を参照)のを機にそれ以前のバージョン管理システムの欠点を埋めるアイデアを取り入れて開発した。現在最もスタンダードでポピュラーなバージョン管理システムである。</li>
 </ul>
 
 <h3>
@@ -79,7 +79,7 @@
 
 <ul>
 <li>gitの1機能、「リモートサーバでのリポジトリ管理」の「リモートサーバ」の中でもいま(2016年現在)最も人気なサービス。<br>
-gitのリモートサーバ機能だけでなくSNS的機能(followers, feeds)もついており、あまり凝っていないサイトならGitHub内で公開出来たりととても便利。</li>
+gitのリモートサーバ機能だけでなくSNS的機能(followers, feeds)もついており、あまり凝っていないサイトならGitHub内で公開出来たりととても便利。ちなみにこのページもGitHubの1機能「GitHub Pages」を使わせて頂いている。</li>
 </ul>
 
       <footer class="site-footer">
